test/tests/stages/9_functions/valid/extra_credit/label_naming_scheme.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[38]:
  int
  identifier(main)
  (
  void
  )
  {
  identifier(_label)
  :
  identifier(label_)
  :
  return
  const int(0)
  ;
  }
  int
  identifier(main_)
  (
  void
  )
  {
  identifier(label)
  :
  return
  const int(0)
  ;
  }
  int
  identifier(_main)
  (
  void
  )
  {
  identifier(label)
  :
  return
  const int(0)
  ;
  }
