test/tests/stages/9_functions/invalid_labels/extra_credit/goto_cross_function.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[25]:
  int
  identifier(foo)
  (
  void
  )
  {
  identifier(label)
  :
  return
  const int(0)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  goto
  identifier(label)
  ;
  return
  const int(1)
  ;
  }
